fix(css): page overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 html,
 body,
 #__nuxt {
-  @apply bg-white dark:bg-background font-poppins transition-[background] duration-300;
+  @apply bg-white dark:bg-background font-poppins transition-[background] duration-300 overflow-y-auto;
 }
